[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/snake.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Snake.gd" type="Script" id=2]
[ext_resource path="res://Audio/creaturetalk.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[sub_resource type="CircleShape2D" id=3]
radius = 12.0416

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "try_attack"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy"
} ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Snake" type="KinematicBody2D" groups=[
"enemy",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LeftTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftTrigger"]
position = Vector2( -11, 14 )
shape = SubResource( 2 )

[node name="RightTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightTrigger"]
position = Vector2( 11, 14 )
shape = SubResource( 2 )

[node name="AttackTrigger" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackTrigger"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Idle = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_exited" from="LeftTrigger" to="." method="_on_LeftTrigger_body_exited"]
[connection signal="body_exited" from="RightTrigger" to="." method="_on_RightTrigger_body_exited"]
[connection signal="body_entered" from="AttackTrigger" to="." method="_on_AttackTrigger_body_entered"]
[connection signal="body_exited" from="AttackTrigger" to="." method="_on_AttackTrigger_body_exited"]
